# computer-vision-services

./: .gitignore  NOTES.md  README.md  config.yaml  logger_config.yaml  pyproject.toml  run_tests.sh  test-report.md
pytorch/: Dockerfile  README.md  config.yaml  config_classification.yaml  config_instance_segmentation.yaml  config_keypoint_detection.yaml  config_object_detection.yaml  config_segmentation.yaml  infer.py  main.py  myenv.yml  requirements.txt  utils.py
pytorch/labels/: object_detection_coco.yaml
tensorflow/: Dockerfile  README.md  confighandler.py  infer.py  utils.py
tensorflow/configs/: config.yaml
tests/: test_config.py  test_infer.py  test_utils.py
